# cargo-cache

./: .gitignore  .travis.yml  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  release_checklist.txt  rustfmt.toml
.github/workflows/: rust.yml
ci_autoclean/: Cargo.toml
ci_autoclean/src/: main.rs
remove_dir_all/: Cargo.toml  README.md
remove_dir_all/.github/workflows/: rust.yml
remove_dir_all/remove_dir_all/: CHANGELOG.md
remove_dir_all/remove_dir_all/.github/workflows/: publish.yml
remove_dir_all/remove_dir_all/src/: _impl.rs
remove_dir_all/remove_dir_all/src/_impl/: path_components.rs  unix.rs
remove_dir_all/remove_dir_all/tests/: interface.rs
remove_dir_all/src/: _impl.rs  lib.rs
remove_dir_all/src/_impl/: io.rs  win.rs
src/: build.rs  cargocachepaths.rs  clean_unref.rs  clear_unref.rs  cli.rs  date.rs  dirsizes.rs  display.rs  git.rs  lib.rs  library.rs  local.rs  main.rs  output.rs  query.rs  remove.rs  tables.rs  test_helpers.rs  top_items.rs  top_items_summary.rs  verify.rs  version.rs
src/cache/: bin.rs  cache.rs  cache_trait.rs  caches.rs  dircache.rs  git_bare_repos.rs  git_checkouts.rs  git_repos_bare.rs  mod.rs  registry_cache.rs  registry_index.rs  registry_pkg_cache.rs  registry_sources.rs
src/commands/: local.rs  mod.rs  query.rs  sccache.rs  toolchains.rs  trim.rs
src/top_items/: binaries.rs  common.rs  git_bare_repos.rs  git_checkouts.rs  git_repos_bare.rs  mod.rs  registry_cache.rs  registry_pkg_cache.rs  registry_sources.rs
src/verify/: registry_archives.rs
tests/: all_cargo_cache_paths_are_known.rs  alternative_registry.rs  alternative_registry.rs_  alternative_registry_cloudsmith.rs  clean_unref.rs  clear_unref.rs  local_subcmd.rs  no_cargo_home.rs  rm_dir.rs  size_test.rs  spurious_files_in_cache.rs  test_helpers.rs  toolchain.rs
tests/all_cargo_home_paths_are_known/testcrate/: Cargo.toml
tests/clean_unref/actual_crate/: Cargo.toml
tests/clean_unref/crate_to_populate_cache/: Cargo.toml
tests/cloudsmith_registry_test/helloworld/: Cargo.toml
tests/cloudsmith_registry_test/helloworld/src/: lib.rs
tests/cloudsmith_registry_test/use_cloudsmith_dep/: Cargo.toml
tests/cloudsmith_registry_test/use_cloudsmith_dep/src/: main.rs
tests/size_test/: Cargo.toml
tests/size_test/src/: lib.rs
utils/: bkp_cargo_home.sh  unbkp_cargo_home.sh
