[package]
name = "cargo-cache"
version = "0.4.2"
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
description = "Manage cargo cache ($CARGO_HOME or ~/.cargo/), show sizes and remove directories selectively"
homepage = "https://github.com/matthiaskrgr/cargo-cache"
repository = "https://github.com/matthiaskrgr/cargo-cache"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["cargo", "cache", "cli", "manage", "cargo-home"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools"]
build = "src/build.rs"
edition = "2018"

[features]
default = ["cargo_metadata", "chrono", "clap", "git2", "humansize", "rayon", "regex", "rustc_tools_util", "walkdir"]
bench = [] # run benchmarks
ci-autoclean = [] # minimal implementation that builds fast for CI
offline_tests =  [] # only run tests that do not require internet connection
# some details: https://github.com/NixOS/nixpkgs/pull/77310

[dependencies]
# https://github.com/oli-obk/cargo_metadata
cargo_metadata = { version = "0.9.0", optional = true } # get crate package name

# https://github.com/kbknapp/clap-rs
clap = { version = "2.33.0", optional = true }  # cmdline arg parsing

# https://github.com/alexcrichton/git2-rs
git2 = { version = "0.13.0", default-features = false,  optional = true  } # check if repo is git repo

# https://github.com/brson/home
home = "0.5.1" # get CARGO_HOME

# https://github.com/LeopoldArkham/humansize
humansize = { version = "1.1.0", optional = true } # convert digits of bytes to human readable size

# https://github.com/rayon-rs/rayon
rayon = { version = "1.2.0", optional = true } # parallelize iterators

# https://github.com/rust-lang/regex
regex = { version = "1.3.1", optional = true } # use regex for matching

# https://github.com/rust-lang/rust-clippy/tree/master/rustc_tools_util
rustc_tools_util = { version = "0.2.0", optional = true } # git version information

# https://github.com/BurntSushi/walkdir
walkdir = { version = "2.2.9", optional = true } # walk content of directory/CARGO_HOME recursively

# https://github.com/alexcrichton/cfg-if
cfg-if = { version = "0.1.10" } # if cfg(..)  { ...  }

# https://github.com/chronotope/chrono
chrono = { version = "0.4.9", optional = true } # compare dates etc

[dev-dependencies]
# https://github.com/rhysd/path-slash
path-slash = "0.1.1" # normalize windows paths

# https://github.com/colin-kiegel/rust-pretty-assertions
pretty_assertions = "0.6.1" # colored diff assertions

# https://github.com/webdesus/fs_extra
fs_extra = "1.1.0" # copy directories recursively

# https://github.com/Stebalien/tempfile
tempfile = "3.1.0" # create and rm temporary directories for tests

[build-dependencies]
# https://github.com/rust-lang/rust-clippy/tree/master/rustc_tools_util
rustc_tools_util = "0.2.0" # git version information




[[bin]]
name = "cargo-cache"
path = "src/main.rs"
test = true
bench = true

[badges]
#travis-ci = { repository = "matthiaskrgr/cargo-cache", branch = "master" }

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
