[package]
name = "use_cloudsmith_dep"
version = "0.1.0"
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helloworld = { version = "0.1.0", registry = "cloudsmith" }
