[package]
name = "use_cloudsmith_dep"
version = "0.1.0"
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
edition = "2018"
description = "crate which requires a dependency I uploaded to cloudsmith"
# https://cloudsmith.io/~matthias-kruger/repos/ccart/packages/detail/cargo/helloworld/0.1.0/

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helloworld = { version = "0.1.0", registry = "cloudsmith" }
rustc_tools_util =  { version = "0.2.0" }